--- a/WinampServer/packages.config
+++ b/WinampServer/packages.config
@@ -2,17 +2,17 @@
 <packages>
   <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net46" />
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net46" />
-  <package id="Google.Apis" version="1.20.0" targetFramework="net452" />
-  <package id="Google.Apis.Auth" version="1.20.0" targetFramework="net452" />
-  <package id="Google.Apis.Core" version="1.20.0" targetFramework="net452" />
-  <package id="Google.Apis.YouTube.v3" version="1.20.0.701" targetFramework="net452" />
+  <package id="Google.Apis" version="1.40.2" targetFramework="net46" />
+  <package id="Google.Apis.Auth" version="1.40.2" targetFramework="net46" />
+  <package id="Google.Apis.Core" version="1.40.2" targetFramework="net46" />
+  <package id="Google.Apis.YouTube.v3" version="1.40.2.1593" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
-  <package id="log4net" version="2.0.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.4.1" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" />
@@ -22,9 +22,10 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Vlc.DotNet.Core" version="2.1.130" targetFramework="net452" />
-  <package id="Vlc.DotNet.Core.Interops" version="2.1.130" targetFramework="net452" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.7.1" targetFramework="net46" />
+  <package id="Vlc.DotNet.Core" version="3.0.0" targetFramework="net46" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.0.0" targetFramework="net46" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net452" />
 </packages>
